# NES-Emulator

./: README.md
Emulator/: Bus.cpp  Bus.h  CMakeLists.txt  CPU.cpp  CPU.h  Input.cpp  Input.h  Interrupt_type.h  Mapper.cpp  Mapper.h  Mirroring.h  Opcode.cpp  Opcode.h  PPU.cpp  PPU.h  ROM.cpp  ROM.h  Sound_Queue.cpp  Sound_Queue.h  addressing_mode.h  main.cpp
Emulator/Mappers/: mapper0.cpp  mapper0.h
Emulator/nes_apu/: Blip_Buffer.cpp  Blip_Buffer.h  Nes_Oscs.h
Web/: package-lock.json  package.json  tailwind.config.js
Web/public/: index.html
Web/public/Emulator/: NES_Emulator.js
Web/src/: App.tsx  global.d.ts  index.css
Web/src/api/: cards.json  games.json
Web/src/components/: Body.tsx  Card.tsx  Card_Temp.tsx  Carousel.tsx  Cursor.tsx  Emulator.tsx  Footer.tsx  GameTitle.tsx  Header.tsx  MenuButton.tsx  MenuLabel.tsx
Web/src/contexts/: CursorContext.tsx
